# pyrtcm

./: .gitignore  CITATION.bib  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  build.xml  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: main.yml
docs/: conf.py  index.rst  modules.rst  pyrtcm.rst
examples/: benchmark.py  gnssntripclient.conf  hmc_4076_201.py  msmparser.py  ntripclient.py  rtcm_ntrip_client.py  rtcmbuild.py  rtcmfile.py  rtcmpoller.py  rtcmserial.py  rtcmsocket.py  temp.txt  test.py  test2.py
pyrtcm/: __init__.py  _version.py  exceptions.py  rtcmhelpers.py  rtcmmessage.py  rtcmreader.py  rtcmtables.py  rtcmtypes_core.py  rtcmtypes_get.py
src/pyrtcm/: __init__.py  _version.py  rtcmhelpers.py  rtcmmessage.py  rtcmreader.py  rtcmtables.py  rtcmtypes_core.py  rtcmtypes_get.py  rtcmtypes_get_igs.py  rtcmtypes_get_msm.py  socket_stream.py  socket_wrapper.py  socketwrapper.py
src/pyrtcm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_definitions.py  test_socket.py  test_specialcases.py  test_static.py  test_stream.py  testsuite.py
